fix YouTube embed width on mobile. dont show insta embed on mobile

--- a/src/Components/IncidentCard/IncidentCard.scss
+++ b/src/Components/IncidentCard/IncidentCard.scss
@@ -82,6 +82,7 @@
       .MuiButtonBase-root {
         &.ShareButton {
           font-size: 10px;
+          margin-bottom: 8px;
 
           &:hover {
             border: 2px solid $primary-font-color;
